# Replay-Kit

./: .gitignore  AGENTS.md  CHANGELOG.md  GOALS.md  LICENSE  README.md  SECURITY.md  gaps.md  pyproject.toml
.github/: pull_request_template.md
ci/: expected_hash_parity.json  passive_listener_golden_path.py  passive_listener_network_off_replay_guard.py
docs/: ARCHITECTURE.md  ARTIFACT_FORMAT.md  ARTIFACT_MIGRATION.md  ARTIFACT_SIGNING.md  BUNDLE_EXPORT.md  CAPTURE_ENGINE.md  CI_ASSERTION.md  DETERMINISM_GUARDRAILS.md  DIFF_ENGINE.md  FUZZ_TESTING.md  LOCAL_UI.md  PASSIVE_LISTENER.md  PASSIVE_LISTENER_ARCHITECTURE.md  PASSIVE_MODE_RELEASE_CHECKLIST.md  PERFORMANCE_BENCHMARKS.md  PLUGINS.md  PRODUCTION_READINESS.md  PUBLIC_API.md  RELEASES.md  REPLAY_ENGINE.md  ROADMAP.md  SNAPSHOT_TESTING.md  plugins.md  providers.md  release-notes-provider-capture-target-recording.md
replaykit/: __init__.py  bootstrap.py
replaypack/: __init__.py  __main__.py  agent_capture.py  ci_parity.py  guardrails.py  listener_agent_gateway.py  listener_daemon.py  listener_gateway.py  listener_redaction.py  listener_state.py  live_demo.py  llm_capture.py  performance.py  snapshot.py  transparent_macos.py
schemas/: README.md  rpk-1.0.schema.json
tests/: test_agent_adapter_registry.py  test_agent_capture_claude_code.py  test_agent_capture_codex.py  test_artifact_io.py  test_artifact_migration.py  test_artifact_schema_contract.py  test_artifact_signing.py  test_assertion.py  test_bootstrap_runner.py  test_bundle_export.py  test_canonicalization.py  test_capture_adapters.py  test_ci_parity.py  (+58 more)
(+79 files in other folders)
