[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replaykit"
version = "0.1.0"
description = "Deterministic replay and diff debugging for AI workflows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "ReplayKit Contributors"}
]
dependencies = [
  "typer>=0.12.0"
]

[project.scripts]
replaykit = "replaypack.cli.app:main"

[tool.setuptools]
packages = [
  "replaypack",
  "replaypack.core",
  "replaypack.capture",
  "replaypack.artifact",
  "replaypack.replay",
  "replaypack.diff",
  "replaypack.cli",
  "replaypack.ui",
]
